--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -1,1 +1,22 @@
-<p>login-page works!</p>
+<div class="flex flex-column">
+    <span class="text-lg mb-4">Login</span>
+
+    <mat-form-field>
+        <mat-label>User</mat-label>
+        <input type="text" matInput placeholder="Your user name">
+    </mat-form-field>
+
+    <mat-form-field>
+        <mat-label>Password</mat-label>
+        <input type="password" matInput placeholder="Your password">
+    </mat-form-field>
+
+    <button mat-button mat-flat-button color="primary">
+        <mat-icon>login</mat-icon>
+        Login
+    </button>
+
+    <div class="flex justify-content-end mt-5">
+        <a routerLink="/auth/register">Sign Up</a>
+    </div>
+</div>
