--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -1,2 +1,48 @@
-<p>layout-page works!</p>
-<router-outlet></router-outlet>
+<mat-sidenav-container fullscreen>
+    <!-- Sidenav -->
+    <mat-sidenav #sidenav mode="push" [ngStyle]="{ width: '250px' }">
+
+        <mat-toolbar>
+            <span>Menu</span>
+            <span class="spacer"></span>
+
+            <button mat-icon-button (click)="sidenav.toggle()">
+                <mat-icon color="primary">close</mat-icon>
+            </button>
+        </mat-toolbar>
+
+        <mat-nav-list>
+            <mat-list-item 
+                *ngFor="let item of sidebarItems"
+                [routerLink]="item.url"
+                (click)="sidenav.toggle()"
+            >  
+                <mat-icon matListItemIcon>{{ item.icon }}</mat-icon>
+                {{ item.label }}
+            </mat-list-item>
+        </mat-nav-list>
+
+    </mat-sidenav>
+
+    <!-- Navbar -->
+    <mat-toolbar color="primary">
+
+        <button mat-icon-button (click)="sidenav.toggle()" >
+            <mat-icon>menu</mat-icon>
+        </button>
+
+        <span class="spacer"></span>
+
+        <button mat-button >
+            <mat-icon>logout</mat-icon>
+            Logout</button>
+    </mat-toolbar>
+
+    <!-- Main  -->
+    <div class="container">
+        <router-outlet></router-outlet>
+    </div>
+
+</mat-sidenav-container>
+
+
