--- a/src/app/heroes/components/hero-card/hero-card.component.html
+++ b/src/app/heroes/components/hero-card/hero-card.component.html
@@ -4,7 +4,7 @@
         <mat-card-subtitle>{{ hero.alter_ego }}</mat-card-subtitle>
     </mat-card-header>
 
-    <!-- TODO: image -->
+    <img mat-card-image [src]="hero | heroeImage" [alt]="hero.superhero">
 
     <mat-card-content class="mt-2">
         <h4>{{ hero.publisher}}</h4>
