--- a/src/app/heroes/pages/search-page/search-page.component.html
+++ b/src/app/heroes/pages/search-page/search-page.component.html
@@ -1,1 +1,29 @@
-<p>search-page works!</p>
+<div class="flex flex-column p-2">
+    <h3>Searcher</h3>
+
+    <mat-form-field>
+        <mat-label>Searcher of heroes</mat-label>
+        <input
+            type="text"
+            matInput
+            [formControl]="searchInput"
+            (input)="searchHero()"
+            [matAutocomplete]="auto"
+        />
+
+        <mat-autocomplete autoActiveFirstOption
+            #auto="matAutocomplete"
+            (optionSelected)="onSelectedOption( $event )"
+        >
+            <mat-option *ngFor="let hero of heroes" [value]="hero">
+                {{ hero.superhero }}
+            </mat-option>
+
+            <mat-option 
+                *ngIf="heroes.length === 0 && searchInput.value && searchInput.value.length > 0"
+                value="">
+                Not found anything with the term {{ searchInput.value }}
+            </mat-option>
+        </mat-autocomplete>
+    </mat-form-field>
+</div>
