--- a/src/app/heroes/pages/new-page/new-page.component.html
+++ b/src/app/heroes/pages/new-page/new-page.component.html
@@ -1,1 +1,68 @@
-<p>new-page works!</p>
+<h1>Edit / Add</h1>
+
+<mat-divider class="mb-2"></mat-divider>
+
+<div class="grid">
+    <div class="col-12 sm:col-6">
+        <mat-card>
+            <mat-card-content>
+                <div class="grid">
+                    <mat-form-field class="col-12 sm:col-6">
+                        <mat-label>Superhero</mat-label>
+                        <input type="text" matInput required>
+                    </mat-form-field>
+
+                    <mat-form-field class="col-12 sm:col-6">
+                        <mat-label>Alter Ego</mat-label>
+                        <input type="text" matInput required>
+                    </mat-form-field>
+
+                    <mat-form-field class="col-12">
+                        <mat-label>First Appearance</mat-label>
+                        <input type="text" matInput required>
+                    </mat-form-field>
+
+                    <mat-form-field class="col-12">
+                        <mat-label>Characters</mat-label>
+                        <input type="text" matInput required>
+                    </mat-form-field> 
+                    
+                    <mat-form-field class="col-12">
+                        <mat-label>Creator</mat-label>
+                        <mat-select required>
+                            <mat-option *ngFor="let publisher of publishers"
+                                [value]="publisher.id">
+                                {{ publisher.desc }}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field> 
+                </div>
+
+                <div class="flex justify-content-between">
+                    <button
+                        mat-flat-button
+                        color="warn"
+                    >
+                        <mat-icon>delete</mat-icon>
+                        Delete
+                    </button>
+            
+                    <button
+                        mat-flat-button
+                        color="primary"
+                    >
+                        <mat-icon>save</mat-icon>
+                        Save
+                    </button>
+                </div>
+
+            </mat-card-content>
+        </mat-card>
+    </div>
+
+    <div class="col-12 sm:col-6">
+        <mat-card>
+            <img src="" alt="" mat-card-image />
+        </mat-card>
+    </div>
+</div>
