--- a/src/app/heroes/pages/new-page/new-page.component.html
+++ b/src/app/heroes/pages/new-page/new-page.component.html
@@ -6,37 +6,71 @@
     <div class="col-12 sm:col-6">
         <mat-card>
             <mat-card-content>
-                <div class="grid">
+                <!-- Form Init -->
+                <form class="grid" [formGroup]="heroForm" (ngSubmit)="onSubmit()">
                     <mat-form-field class="col-12 sm:col-6">
+
                         <mat-label>Superhero</mat-label>
-                        <input type="text" matInput required>
+                        <input
+                            type="text"
+                            matInput
+                            required
+                            formControlName="superhero"
+                        >
                     </mat-form-field>
 
                     <mat-form-field class="col-12 sm:col-6">
                         <mat-label>Alter Ego</mat-label>
-                        <input type="text" matInput required>
+                        <input
+                            type="text"
+                            matInput
+                            required
+                            formControlName="alter_ego"
+                        >
                     </mat-form-field>
 
                     <mat-form-field class="col-12">
                         <mat-label>First Appearance</mat-label>
-                        <input type="text" matInput required>
+                        <input
+                            type="text"
+                            matInput
+                            required
+                            formControlName="first_appearance"
+                        >
                     </mat-form-field>
 
                     <mat-form-field class="col-12">
                         <mat-label>Characters</mat-label>
-                        <input type="text" matInput required>
+                        <input
+                            type="text"
+                            matInput
+                            required
+                            formControlName="characters"
+                        >
                     </mat-form-field> 
                     
                     <mat-form-field class="col-12">
                         <mat-label>Creator</mat-label>
-                        <mat-select required>
+                        <mat-select 
+                            required
+                            formControlName="publisher"
+                        >
                             <mat-option *ngFor="let publisher of publishers"
                                 [value]="publisher.id">
                                 {{ publisher.desc }}
                             </mat-option>
                         </mat-select>
                     </mat-form-field> 
-                </div>
+
+                    <mat-form-field class="col-12">
+                        <mat-label>Alternative Image</mat-label>
+                        <input
+                            type="text"
+                            matInput
+                            formControlName="alt_img"
+                        >
+                    </mat-form-field>
+                </form>
 
                 <div class="flex justify-content-between">
                     <button
@@ -50,6 +84,7 @@
                     <button
                         mat-flat-button
                         color="primary"
+                        (click)="onSubmit()"
                     >
                         <mat-icon>save</mat-icon>
                         Save
@@ -62,7 +97,7 @@
 
     <div class="col-12 sm:col-6">
         <mat-card>
-            <img src="" alt="" mat-card-image />
+            <img [src]="currentHero | heroeImage" alt="image of hero" mat-card-image />
         </mat-card>
     </div>
 </div>
